[workspace]
[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }

revm-precompile = { path = "../../revm/crates/precompile", features = [
    'std',
    'c-kzg',
], default-features = false }
revm-primitives = { path = "../../revm/crates/primitives", features = [
    'std',
    'c-kzg',
], default-features = false }
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
