[workspace]
[package]
version = "0.1.0"
name = "sp1-revm-kzg-profile"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }

revm-precompile = { git = "https://github.com/0xWOLAND/revm", branch = "patch-v5.0.0", features = [
    'std',
    'sp1-kzg',
], default-features = false }
revm-primitives = { git = "https://github.com/0xWOLAND/revm", branch = "patch-v5.0.0", features = [
    'std',
    'sp1-kzg',
], default-features = false }
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
